<resources>
  <string name="app_name">足球の城</string>
  <string name="xlistview_header_hint_normal">下拉刷新</string>
  <string name="xlistview_header_hint_ready">释放刷新</string>
  <string name="xlistview_header_hint_loading">加载中…</string>
  <string name="xlistview_header_last_time">上次刷新时间 :</string>
  <string name="xlistview_footer_hint_normal">载入更多</string>
  <string name="xlistview_footer_hint_ready">释放载入更多</string>
  <string name="game_remain_time">82:45:26</string>
  <string name="id_hint">手机号码 :</string>
  <string name="pwd_hint">密码 :</string>
  <string name="login">登 录</string>
  <string name="logout_verify">您想退出足球の城吗?</string>
  <string name="logout">退出</string>
  <string name="register">注册</string>
  <string name="social">社交</string>
  <string name="challenge">擂台</string>
  <string name="chat_challenge">擂台</string>
  <string name="search">发现</string>
  <string name="club">俱乐部</string>
  <string name="bbs">球谈</string>
  <string name="view_more">+</string>
  <string name="alias">昵称</string>
  <string name="chat_content">会话内容</string>
  <string name="chat_lastdate">2015-01-30</string>
  <string name="chat_lasttime">06:21</string>
  <string name="clubname">俱乐部名称</string>
  <string name="bbs_title">论坛标题</string>
  <string name="bbs_content">专业的体育用品专卖点，提供各类（篮球/足球/羽毛球/壁球等）运动服装，运动鞋，健身器材，户外用品，泳装，自行车</string>
  <string name="challenge_list">擂台</string>
  <string name="manager_notices">平台赛事</string>
  <string name="player_number">人制</string>
  <string name="versus">VS</string>
  <string name="stadium">场地: 东北路小学</string>
  <string name="player_market">球员市场</string>
  <string name="club_market">俱乐部中心</string>
  <string name="invitation">邀请信</string>
  <string name="temp_invitation">租借信</string>
  <string name="contact_accept">好友申请</string>
  <string name="contact_add">添加好友</string>
  <string name="chatting_room">聊天室</string>
  <string name="back">返回</string>
  <string name="send">发送</string>
  <string name="answer">评  价</string>
  <string name="settings">俱乐部设置</string>
  <string name="apply_game_failed">您的应战申请处理失败。请再确认申请的准确性。</string>
  <string name="apply_game_success">报名参赛成功。</string>
  <string name="apply_game_by_other_club_prefix">您已作为</string>
  <string name="apply_game_by_other_club_suffix">的球员参赛</string>
  <string name="reject_game_success">退赛成功。</string>
  <string name="reject_reason_game_cancel">比赛因退赛已失效。</string>
  <string name="chat_settings">聊天设置</string>
  <string name="chatroom_user_name">成员名称</string>
  <string name="add_chat_friend">添加好友</string>
  <string name="chat_alarm_stop">消息免打扰</string>
  <string name="chat_clear_history">清空聊天记录</string>
  <string name="chat_clear_history_success">清理成功</string>
  <string name="chat_clear_history_failed">清理失败，请重试</string>
  <string name="change_game">比赛编制</string>
  <string name="game_result">比分</string>
  <string name="exit_game">退赛</string>
  <string name="exit_game_title">请您选择退赛类型</string>
  <string name="discuss_exit">协议退赛</string>
  <string name="force_exit">强制退赛</string>
  <string name="exit_game_cause_title">请输入退赛原因</string>
  <string name="no_exit_game">现在您不能申请退赛。</string>
  <string name="response_game">应战</string>
  <string name="opponent_info">对手</string>
  <string name="report_other">投诉</string>
  <string name="save_status">保存</string>
  <string name="report_success">投诉成功</string>
  <string name="report_failed">投诉失败</string>
  <string name="create_bbs">发布[论坛/文章]</string>
  <string name="create_challenge">发布擂台</string>
  <string name="create_proclaim">发起战书</string>
  <string name="new_chall_stadium_error">请选择场地区域</string>
  <string name="new_chall_stadium_address_error">请输入场地详细地址</string>
  <string name="chall_stadium_area_label">场地区域 :</string>
  <string name="chall_stadium_address">详细地址</string>
  <string name="chall_stadium_address_label">详细地址 :</string>
  <string name="create_club">创建俱乐部</string>
  <string name="create_club_mark_nonselected">请上传俱乐部头像</string>
  <string name="add_bbs_img_nonselect">请选择会上转的论点图片</string>
  <string name="individual_settings">个人设置</string>
  <string name="announce">发布</string>
  <string name="team_host">主  队</string>
  <string name="team_host_label">主  队 :</string>
  <string name="team_invt">客  队</string>
  <string name="team_invt_label">客  队 :</string>
  <string name="select">选择</string>
  <string name="game_date">比赛日期</string>
  <string name="game_date_label">比赛日期 :</string>
  <string name="game_time">比赛时间</string>
  <string name="game_time_label">比赛时间 :</string>
  <string name="players_mode">赛制</string>
  <string name="players_mode_label">赛  制 :</string>
  <string name="game_stadium">比赛场地</string>
  <string name="game_stadium_value">东北路小学</string>
  <string name="judgment">裁判 :</string>
  <string name="no_need">不需要</string>
  <string name="payment_mode">场地费用</string>
  <string name="payment_mode_label">场地费用 :</string>
  <string name="payment_mode_01">主队支付</string>
  <string name="payment_mode_02">客队支付</string>
  <string name="payment_mode_03">AA制</string>
  <string name="create">创建</string>
  <string name="modify">变更</string>
  <string name="create_date">成立时间 :</string>
  <string name="city">所属城市 :</string>
  <string name="sponser">赞 助 商 :</string>
  <string name="play_dates">活动时间 :</string>
  <string name="play_areas">活动区域 :</string>
  <string name="main_stadium">主场 :</string>
  <string name="main_stadium_area">主场区域 :</string>
  <string name="main_stadium_address">详细地址 :</string>
  <string name="main_stadium_val">高新园区，西风区</string>
  <string name="intro">简   介 :</string>
  <string name="intro_val">2015大超亚军</string>
  <string name="edit_settings">编辑个人资料</string>
  <string name="show_profile">个人资料</string>
  <string name="invite">邀  请</string>
  <string name="allow_accept_friends">允许好友申请</string>
  <string name="allow_invite_club">允许俱乐部邀请</string>
  <string name="allow_manager_notice">平台消息通知</string>
  <string name="sharing_to_friends">分享给小伙伴</string>
  <string name="clear_datas">清理内存</string>
  <string name="send_opinion">意见反馈</string>
  <string name="about_goalgroup_app">软件介绍</string>
  <string name="club_meeting">俱乐部大厅</string>
  <string name="chall_discuss">会议厅</string>
  <string name="user_recommend">球员推荐</string>
  <string name="start_activity">发布活动</string>
  <string name="club_members">俱乐部成员</string>
  <string name="club_infos">俱乐部信息</string>
  <string name="edit_club">编辑俱乐部</string>
  <string name="edit_game">编辑比赛</string>
  <string name="edit_game_menu">编制赛程表</string>
  <string name="activity">活动</string>
  <string name="picture">图片</string>
  <string name="schedule">赛程</string>
  <string name="club_results">战绩</string>
  <string name="player_results">个人数据</string>
  <string name="leave_club">离队</string>
  <string name="official_note">战书</string>
  <string name="club_members_title">俱乐部成员</string>
  <string name="position_forward">前锋</string>
  <string name="position_midfield">中场</string>
  <string name="position_back">后卫</string>
  <string name="position_keeper">门将</string>
  <string name="position_forward1">前锋【中锋】</string>
  <string name="position_forward2">前锋【二前锋】</string>
  <string name="position_forward3">前锋【边锋】</string>
  <string name="position_midfield1">中场【前腰】</string>
  <string name="position_midfield2">中场【前卫】</string>
  <string name="position_midfield3">中场【边前卫】</string>
  <string name="position_midfield4">中场【后腰】</string>
  <string name="position_back1">后卫【边后卫】</string>
  <string name="position_back2">后卫【中后卫】</string>
  <string name="position_back3">后卫【盯人中卫】</string>
  <string name="enter_request">加盟申请</string>
  <string name="enter_request_list">加盟审核</string>
  <string name="accept">接受</string>
  <string name="delete">删除</string>
  <string name="manager_settings_title">俱乐部大厅-设置</string>
  <string name="health_state">健康状况</string>
  <string name="activity_alarm">活动消息通知</string>
  <string name="new_msg_alarm">聊天消息通知</string>
  <string name="match_alarm">比赛消息通知</string>
  <string name="off_notice_alarm">战书消息通知</string>
  <string name="enter_req_alarm">加盟申请通知</string>
  <string name="server_alarm">平台消息通知</string>
  <string name="accept_req_alarm">允许球员加盟</string>
  <string name="filter">筛选</string>
  <string name="filter_cond">筛选条件</string>
  <string name="filter_result">筛选结果</string>
  <string name="age_area">年龄区间</string>
  <string name="aver_age_area">平均年龄区间</string>
  <string name="player_position">场上位置</string>
  <string name="player_position_02">场上位置 :</string>
  <string name="aver_ages">平均年龄 :</string>
  <string name="inv_accept">接</string>
  <string name="inv_delete">删</string>
  <string name="setting_item">设置项目</string>
  <string name="all">全体</string>
  <string name="age_cond_01">18岁以下</string>
  <string name="age_cond_02">18-25岁</string>
  <string name="age_cond_03">26-33岁</string>
  <string name="age_cond_04">34-41岁</string>
  <string name="age_cond_05">42-49岁</string>
  <string name="age_cond_06">50岁以上</string>
  <string name="date_value">2015&#8211;01&#8211;30</string>
  <string name="time_value">10:30</string>
  <string name="none">无</string>
  <string name="view_more_mark">…</string>
  <string name="img_desc_empty"></string>
  <string name="club_caption_caption">领 队</string>
  <string name="club_manager_caption">教 练</string>
  <string name="club_action_days">活动时间</string>
  <string name="club_action_day_01">周一</string>
  <string name="club_action_day_02">周二</string>
  <string name="club_action_day_03">周三</string>
  <string name="club_action_day_04">周四</string>
  <string name="club_action_day_05">周五</string>
  <string name="club_action_day_06">周六</string>
  <string name="club_action_day_07">周日</string>
  <string name="club_action_ages">年龄区间</string>
  <string name="club_action_age_01">18岁以下</string>
  <string name="club_action_age_02">18&#8211;25</string>
  <string name="club_action_age_03">26&#8211;33</string>
  <string name="club_action_age_04">34&#8211;41</string>
  <string name="club_action_age_05">42&#8211;49</string>
  <string name="club_action_age_06">50以上</string>
  <string name="club_action_position">场上位置</string>
  <string name="club_create_action_city">所属城市</string>
  <string name="club_create_action_location">活动区域</string>
  <string name="club_create_action_stadium_area">主场区域</string>
  <string name="club_create_name_error">请输入俱乐部名称</string>
  <string name="club_create_name_invalid">不能输入空白文字</string>
  <string name="club_create_name_length_error">请输入30字以内的内容</string>
  <string name="club_create_date_error">请选择成立时间</string>
  <string name="club_create_city_error">请选择所属城市</string>
  <string name="club_create_actdate_error">请选择活动时间</string>
  <string name="club_create_stadium_error">请选择主场区域</string>
  <string name="club_create_stadium_address_error">请输入主场详细地址</string>
  <string name="club_create_dist_error">请选择活动区域</string>
  <string name="club_create_sponsor_error">请输入10字以内的内容</string>
  <string name="club_create_introduction_error">请输入100字以内的内容</string>
  <string name="club_create_success">创造俱乐部成功</string>
  <string name="club_edit_success">保存成功</string>
  <string name="club_create_failed">创造俱乐部失败</string>
  <string name="club_name_exist">俱乐部名称已存在</string>
  <string name="game_schedule">比赛日程</string>
  <string name="club_history">俱乐部战绩</string>
  <string name="player_history">个人数据</string>
  <string name="action_point">活跃度</string>
  <string name="none_network">网格无法连接</string>
  <string name="str_owner_selected">不能重复选择领队</string>
  <string name="str_owner_delete_warning">不能删除领队</string>
  <string name="str_manager_delete_warning">不能删除教练</string>
  <string name="wait">请稍等…</string>
  <string name="login_notice_username">请输入用户名</string>
  <string name="login_notice_password">请输入密码</string>
  <string name="register_notice_username">请输入用户</string>
  <string name="register_notice_password">请输入密码</string>
  <string name="register_notice_phonenumber">请输入手机号码</string>
  <string name="news">消息</string>
  <string name="news_content_sample">这是消息的例子。这是消息的例子。这是消息的例子。</string>
  <string name="phone_number">手机号码</string>
  <string name="password">密码</string>
  <string name="password_conf">密码确认</string>
</resources>