<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >
    
    <include
        android:id="@+id/new_challenge_top_view"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        layout="@layout/top_view_common" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/new_challenge_top_view"
        android:layout_above="@id/send_challenge" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:id="@+id/area_edit_profile"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/edit_settings"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		        <RelativeLayout
		            android:layout_width="20dp"
		            android:layout_height="20dp"
		            android:layout_centerVertical="true"
		            android:layout_alignParentRight="true"
		            android:layout_marginRight="10dp" >
		            
		            <ImageView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:background="@drawable/move_next"
		                android:contentDescription="@string/img_desc_empty" />
		            
		        </RelativeLayout>
		        
		    </RelativeLayout>
		    
            <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/allow_invite_club"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		        <View
		            android:layout_width="match_parent"
		            android:layout_height="1dp"
		            android:layout_marginLeft="5dp"
		            android:layout_marginRight="5dp"
		            android:layout_alignParentBottom="true"
		            android:background="@color/pattern_dark_gray" />
		        
		        <ImageView
		            android:id="@+id/switch_accept_req"
			        android:layout_width="68dp"
			        android:layout_height="30dp"
			        android:layout_marginRight="10dp"
			        android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:background="@drawable/alarm_on"
			        android:contentDescription="@string/img_desc_empty" />
		        
		    </RelativeLayout>
		    
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/item_middle_selector" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/allow_manager_notice"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/switch_news_req"
                    android:layout_width="68dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/alarm_on"
                    android:contentDescription="@string/img_desc_empty" />

            </RelativeLayout>
		    
            <RelativeLayout
                android:id="@+id/area_share_sns"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/sharing_to_friends"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		    </RelativeLayout>
		    
            <RelativeLayout
                android:id="@+id/area_clear_data"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/clear_datas"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		    </RelativeLayout>
		    
            <RelativeLayout
                android:id="@+id/area_report_opinion"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/send_opinion"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		        <View
		            android:layout_width="match_parent"
		            android:layout_height="1dp"
		            android:layout_marginLeft="5dp"
		            android:layout_marginRight="5dp"
		            android:layout_alignParentBottom="true"
		            android:background="@color/pattern_dark_gray" />
		        
		    </RelativeLayout>
		    
            <RelativeLayout
                android:id="@+id/area_about_app"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/about_goalgroup_app"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		    </RelativeLayout>
		    
            <RelativeLayout
                android:id="@+id/area_log_out"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/item_middle_selector" >
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="10dp"
		            android:layout_centerVertical="true"
		            android:text="@string/logout"
		            android:textSize="16sp"
		            android:textColor="#000000" />
		        
		    </RelativeLayout>
            
        </LinearLayout>
        
    </ScrollView>
    
</RelativeLayout>