<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        
	    <RelativeLayout
	        android:id="@+id/ly_club_list_mark"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.2" >
	        
	        <ImageView
	            android:id="@+id/apply_player_photo"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:layout_centerInParent="true"
	            android:contentDescription="@string/img_desc_empty" />
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.8" >
	        
	        <TextView
	            android:id="@+id/apply_player_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:layout_marginTop="5dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:text="@string/news"
	            android:textSize="18sp"
	            android:textColor="#000000" />
	        
	        <TextView
	            android:id="@+id/apply_player_base_infos"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginBottom="5dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentBottom="true"
	            android:maxLines="1"
	            android:ellipsize="end"
	            android:text="@string/news_content_sample"
	            android:textSize="14sp"
	            android:textColor="@color/pattern_dark_gray" />
	        
	    </RelativeLayout>
    
    </LinearLayout>
    
</LinearLayout>